browser light/dark mode adjust, bug fixes

--- a/src/components/dumb/Footer/Footer.module.css
+++ b/src/components/dumb/Footer/Footer.module.css
@@ -17,6 +17,7 @@
   flex-direction: column;
 }
 .columnHeading {
+  color: white;
   font-size: 1.2rem;
   font-weight: 700;
   padding-bottom: 1rem;
@@ -29,6 +30,7 @@ a.columnHeading:hover {
   padding-top: 1rem;
 }
 .rows {
+  color: white;
   font-size: 0.9rem;
   display: flex;
   flex-direction: column;
