--- a/src/components/dumb/HomepagePanel/HomepagePanel.module.css
+++ b/src/components/dumb/HomepagePanel/HomepagePanel.module.css
@@ -18,6 +18,10 @@
   transform: scale(1.03);
 }
 .title {
+  color: white;
   font-weight: 700;
   padding-bottom: 1rem;
+}
+.subTitle {
+  color: white;
 }
